on rajout du css

--- a/templates/rpg/add.html.twig
+++ b/templates/rpg/add.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <h1>Création personnage</h1>
 <button onclick="window.location.href='/';"> Home</button>
-<div class="exemple-wrapper">
+<div class="exemple">
     {{ form_start(form) }}
     <button type="submit" class="btn btn-succes">Ajouter personnarge</button>
     {{ form_end(form) }}
