--- a/templates/rpg/rpg.html.twig
+++ b/templates/rpg/rpg.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <h1>Informations du personnage</h1>
 <button onclick="window.location.href='/';"> Home</button>
-<div class="exemple-wrapper">
+<div class="exemple">
         <h2>{{ personnage.nom }}</h2>
         <p> {{personnage.description}}</p>
         <p> {{personnage.datenaissance.format('d F Y')}}</p>
