--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,10 +7,9 @@
         
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-        <link rel="stylesheets" href="/template/rpg/style.css">
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
-
+        <link rel="stylesheet" href="{{ asset('CSS/style.css') }}">
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
